# scaledown

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Documentation  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  test_script.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scaledown/: __init__.py  config.py  pipeline.py
scaledown/compressor/: config.py
scaledown/optimizer/: __init__.py  base.py  haste.py  semantic_code.py
scaledown/types/: __init__.py  metrics.py
tests/: test_compressor.py  test_config.py  test_haste.py  test_pipeline.py  test_semantic.py
